# LoveLetter

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: 建立第一個冒險者新手任務-issue-.md
.github/workflows/: build_test.yml  cicd.yml  linters.yaml  tests.yml
docs/: README.md
docs/web-ui-sample/: README.md  index.html  input.css  output.css
features/: baron.feature  countess.feature  game_logic.feature  guard.feature  handmaid.feature  king.feature  priest.feature  prince.feature  princess.feature
features/steps/: common.py  game_rules.py  tutorial.py
frontend/: craco.config.js  package-lock.json  package.json
frontend/src/: App.tsx  index.tsx
frontend/src/apis/: index.tsx
frontend/src/components/: Cards.tsx  CreateOrJoinGame.tsx  Deck.tsx  GameEvents.tsx  GameRoom.tsx  GameStatusBoard.tsx  PlayerHand.tsx  PlayerList.tsx  index.ts
frontend/src/hooks/: index.ts  index.tsx  useGameId.ts  useLocalStorage.ts  usePollGameStatus.ts  (+1 more)
love_letter/: config.py  databases.py  main.py  schemas.py  test_main.py
love_letter/models/: __init__.py  cards.py  cards_description.json  deck.py  event.py  exceptions.py
love_letter/repository/: __init__.py
love_letter/serializers/: player_serializers.py
love_letter/service/: __init__.py
love_letter/usecase/: __init__.py  common.py  create_game.py  get_status.py  join_game.py  lobby_game_status.py  lobby_start_game.py  play_card.py  start_game.py
love_letter/web/: app.py  auth.py  example_api.py  presenter.py  sse.py
tests/: __init__.py  run-tests.sh  test_card_behave.py  test_deck.py  test_example_apis.py  test_game_data.py  test_game_rules.py  test_game_service.py  test_lobby_api.py  test_lose_handmaid_protected.py  test_mongo_example.py  test_players.py  test_simple_path_e2e.py
(+6 files in other folders)
