[tool.poetry]
name = "loveletter"
version = "0.1.0"
description = ""
authors = ["Eddy <eddy15201@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
behave = "1.2.6"
unicorn = "^2.0.1"
fastapi = "0.86.0"
mock = "4.0.3"
pydantic = "1.10.2"
pytest = "7.2.0"
pymongo = "4.3.3"
requests = "2.28.1"
schematics = "2.1.1"
uvicorn = "0.19.0"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
