[tool.poetry]
name = "loveletter"
version = "0.1.0"
description = ""
authors = ["Eddy <eddy15201@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = {extras = ["email"], version = "^1.10.2"}
pytest = "7.2.0"
pytest-cov = "^4.0.0"
pytest-flake8 = "^1.1.1"
fastapi = "^0.87.0"
httpx = "^0.23.1"
behave = "^1.2.6"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
