[tool.poetry]
name = "loveletter"
version = "0.1.0"
description = ""
authors = ["Eddy <eddy15201@gmail.com>"]
readme = "README.md"
packages = [{include = "love_letter"}]

[tool.poetry.scripts]
app = 'love_letter.web.app:run'

[tool.poetry.dependencies]
python = "^3.10"
pydantic = {extras = ["email"], version = "^1.10.2"}
pytest = "7.2.0"
pytest-cov = "^4.0.0"
pytest-flake8 = "^1.1.1"
fastapi = "0.103.1"
httpx = "0.24.1"
behave = "^1.2.6"
uvicorn = "^0.20.0"
black = "^22.12.0"
isort = "^5.11.4"
pre-commit = "^2.21.0"
testcontainers-mongodb = "^0.0.1rc1"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
